Opened 2 years ago

Closed 2 years ago

#10692 closed defect (fixed)

Sending commands to atempo filter make it assert

Reported by: Cyryl Ł Owned by:
Priority: normal Component: avfilter
Version: git-master Keywords: filtering audio
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description

Minimal test case. Working commandline:

% ffmpeg -v verbose -f lavfi -i "anullsrc=d=2,atempo=7" -f null -

Failing commandline:

% ffmpeg -v verbose -f lavfi -i "anullsrc=d=2,asendcmd=c='0-1 atempo tempo 7;',atempo" -f null -
ffmpeg version N-112839-gbbdedd9663 Copyright (c) 2000-2023 the FFmpeg developers
  built with gcc 13 (Ubuntu 13.2.0-4ubuntu3)
  configuration: --disable-doc --enable-debug --disable-optimizations --disable-stripping --enable-libx264 --enable-libx265 --enable-gpl --enable-libmp3lame --enable-libfdk-aac --enable-librubberband --enable-nonfree
  libavutil      58. 32.100 / 58. 32.100
  libavcodec     60. 34.100 / 60. 34.100
  libavformat    60. 17.100 / 60. 17.100
  libavdevice    60.  4.100 / 60.  4.100
  libavfilter     9. 13.100 /  9. 13.100
  libswscale      7.  6.100 /  7.  6.100
  libswresample   4. 13.100 /  4. 13.100
  libpostproc    57.  4.100 / 57.  4.100
[Parsed_asendcmd_1 @ 0x55c9a6983c00] start_time:0.000000 end_time:1.000000 index:0
[Parsed_asendcmd_1 @ 0x55c9a6983c00]     [enter] target:atempo command:tempo arg:7 index:0
[Parsed_asendcmd_1 @ 0x55c9a6983c00] [enter+expr] interval #0 start_ts:0.000000 end_ts:1.000000 ts:0.000000
[Parsed_asendcmd_1 @ 0x55c9a6983c00] Processing command #0 target:atempo command:tempo arg:7
[Parsed_asendcmd_1 @ 0x55c9a6983c00] Command reply for command #0: ret:Success res:
[Parsed_asendcmd_1 @ 0x55c9a6983c00] [expr] interval #0 start_ts:0.000000 end_ts:1.000000 ts:0.023220
[Parsed_asendcmd_1 @ 0x55c9a6983c00] [expr] interval #0 start_ts:0.000000 end_ts:1.000000 ts:0.046440
[Parsed_asendcmd_1 @ 0x55c9a6983c00] [expr] interval #0 start_ts:0.000000 end_ts:1.000000 ts:0.069660
[Parsed_asendcmd_1 @ 0x55c9a6983c00] [expr] interval #0 start_ts:0.000000 end_ts:1.000000 ts:0.092880
[Parsed_asendcmd_1 @ 0x55c9a6983c00] [expr] interval #0 start_ts:0.000000 end_ts:1.000000 ts:0.116100
[Parsed_asendcmd_1 @ 0x55c9a6983c00] [expr] interval #0 start_ts:0.000000 end_ts:1.000000 ts:0.139320
[Parsed_asendcmd_1 @ 0x55c9a6983c00] [expr] interval #0 start_ts:0.000000 end_ts:1.000000 ts:0.162540
Assertion zeros != nsamples failed at libavfilter/af_atempo.c:539
fish: Job 1, '../FFmpeg/ffmpeg -v verbose -f …' terminated by signal SIGABRT (Abort)

Change History (1)

comment:1 by Rajiv Harlalka, 2 years ago

Analyzed by developer: set
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.