lavfi/atempo: avoid asendcmd assertion failure

Check for zeros equal to the total samples early, because in
that case we would already be leaving the first few frames out.

Fixes trac ticket #10692